2009-06-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for methodspec signature.

2009-06-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for typespec signature.

	* assembly-with-typespec.il: Input file with a
	bunch of typespec instances.

	* Makefile: Add new dependency.

2009-06-09 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Added read.byte.

2009-06-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for szarray.

	* assembly-with-types.il: Fix the szarray field.

2009-06-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for fnptr instance.

2009-06-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for generic instance.

	* assembly-with-types.il: Add some generic instances.

2009-06-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for array shape.

2009-06-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for type encoding.

	* assembly-with-types.il: Input file with all
	sorts of type encodings.

	* Makefile: Add new dependency.

2009-06-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: LocalsSig tests.

	* assembly-with-locals.il: File with all sort
	of locals sig.

	* Makefile: Add new dependency.

2009-06-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: PropertySig tests.

	* assembly-with-properties.cs: Add property with
	parameters.

2009-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: FieldSig tests.

2009-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: StandAloneSig tests.

	* assembly-with-custommod.il: Added a calli

2009-05-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Methodref signature tests.

	* assembly-with-signatures.cs: File with vararg call.

	* Makefile: Add new dependency.

2009-05-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for parameters and generics
